# Digitaliziruy

./: pyproject.toml
didgitaliziruy/Lessons/: test.py
httpserver/: server.py
solana.kh.ua/: server.py
solana.kh.ua/templates/: login.html
tests/: test_didgitaliziruy.py
